frontend/test/should_pass/basic_201.grg
rule r {
	pattern {
		if{ true; }
		negative {
		}
	}
	modify {
	}
}

